--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@prisma/client": "^6.2.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.0.1",
     "next": "15.1.6",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
