--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
