--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
     "stripe": "^17.5.0",
     "swiper": "^11.2.1",
     "zod": "^3.24.1"
