--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
+    "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@prisma/client": "^6.2.1",
@@ -34,6 +35,7 @@
     "react-loading-skeleton": "^3.5.0",
     "stripe": "^17.5.0",
     "swiper": "^11.2.1",
+    "yup": "^1.6.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
