--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-  "name": "my-nextjs-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build && npx prisma generate",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@headlessui/react": "^2.2.0",
-    "@hookform/resolvers": "^3.10.0",
-    "@mui/icons-material": "^6.4.1",
-    "@mui/material": "^6.4.1",
-    "@prisma/client": "^6.2.1",
-    "@stripe/react-stripe-js": "^3.1.1",
-    "@stripe/stripe-js": "^5.6.0",
-    "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.474.0",
-    "next": "15.1.6",
-    "prisma": "^6.2.1",
-    "react": "^19.0.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0",
-    "react-loading-skeleton": "^3.5.0",
-    "stripe": "^17.6.0",
-    "swiper": "^11.2.1",
-    "yup": "^1.6.1",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "my-nextjs-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "npx prisma generate && next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@headlessui/react": "^2.2.0",
+		"@hookform/resolvers": "^3.10.0",
+		"@mui/icons-material": "^6.4.1",
+		"@mui/material": "^6.4.1",
+		"@prisma/client": "^6.2.1",
+		"@stripe/react-stripe-js": "^3.1.1",
+		"@stripe/stripe-js": "^5.6.0",
+		"axios": "^1.7.9",
+		"bcrypt": "^5.1.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.0.1",
+		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^4.0.0",
+		"lucide-react": "^0.474.0",
+		"next": "15.1.6",
+		"prisma": "^6.2.1",
+		"react": "^19.0.0",
+		"react-chartjs-2": "^5.3.0",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"react-icons": "^5.4.0",
+		"react-loading-skeleton": "^3.5.0",
+		"stripe": "^17.6.0",
+		"swiper": "^11.2.1",
+		"yup": "^1.6.1",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@types/bcrypt": "^5.0.2",
+		"@types/jsonwebtoken": "^9.0.8",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.6",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
